# huggingface-transformers

./: .gitignore  README.md  data_to_coco.py  pyproject.toml  rtdetrv2.ipynb  train.ipynb
rtdetrv2/: README.md  coco_utils.py  config.yaml  evaluation.py  inference.py  train.py  train.sh
rtdetrv2/configs/: evaluation.yaml  inference.yaml  train.yaml
rtdetrv2/onnx/: evaluation.py  inference.py
scripts/: get_example_dataset.py
src/: README.md  coco_utils.py  evaluation.py  inference.py  schedule_training.sh  train.py
src/configs/: conditional-detr.yaml  deformable-detr.yaml  detr.yaml  dfine.yaml  rtdetrv2.yaml  yolos.yaml
src/onnx/: evaluation.py  inference.py
